--- a/src/main/resources/templates/error/generic_error.html
+++ b/src/main/resources/templates/error/generic_error.html
@@ -1,19 +1,41 @@
 <!doctype html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Error</title>
 </head>
 <body>
-<h1>Something went wrong</h1>
-<p>An unexpected error occurred.</p>
+<header>
+    <div th:replace="fragments/navbar :: navbar "></div>
+</header>
+<main>
+    <div class="container">
+        <h1>Something went wrong</h1>
+        <p th:text="${exception.message}">${exception.message}}</p>
+        <ul th:remove="tag">
+            <li th:each="stack: ${exception.stackTrace}">
+                <span th:text="${stack}">${stack}</span>
+            </li>
+        </ul>
+        <div class="col-sm-4 d-grid">
+            <a class="btn btn-outline-secondary" href="/" role="button">Go Home</a>
+        </div>
+    </div>
+</main>
+<footer>
+    <div th:replace="fragments/footer :: footer"></div>
+</footer>
 
-<div th:text="'Failed URL: ' +  ${url}">${url}</div>
-<div th:text="'Exception' + ${exceptionMsg}">${exception.message}</div>
-<ul th:remove="tag">
-    <li th:each="ste : ${stackTrace}">
-        <span th:text="${ste}">${ste}</span>
-    </li>
-</ul>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
+
 </body>
 </html>
