--- a/src/main/resources/templates/error/not_found.html
+++ b/src/main/resources/templates/error/not_found.html
@@ -1,12 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Not found</title>
 </head>
 <body>
-<h1> Entity not found!</h1>
-<p th:text="${errorMessage}"></p>
-<a href="/"> Return to home</a>
+<header>
+    <div th:replace="fragments/navbar :: navbar "></div>
+</header>
+<main>
+    <div class="container">
+        <h1>Entity Not Found!</h1>
+        <p th:text="${message}"></p>
+        <div class="col-sm-4 d-grid">
+            <a class="btn btn-outline-secondary" href="/" role="button">Go Home</a>
+        </div>
+    </div>
+</main>
+<footer>
+    <div th:replace="fragments/footer :: footer"></div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
+
 </body>
 </html>
