--- a/src/main/resources/templates/product/form.html
+++ b/src/main/resources/templates/product/form.html
@@ -1,17 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>Product Form</title>
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link type='text/css' rel='stylesheet' th:href="@{/styles/main.css}">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 </head>
-<body>
-<h1 th:text="(${product == null} ? 'New Product' : 'Edit Product')"></h1>
 
-<form th:action="@{/product/save}" th:object="${product}" method="post">
-    <input type="hidden" th:field="*{id}"/>
-    <input type="text" placeholder="Name" th:field="*{name}"/>
-    <input type="text" placeholder="Description" th:field="*{description}"/>
-    <button type="submit">Save</button>
-</form>
+
+<body>
+<header>
+    <div th:replace="fragments/header_fragment :: header"></div>
+</header>
+<div class="row justify-content-md-center">
+    <div class="col col-lg-7">
+
+
+        <h1 th:text="(${product == null} ? 'New Product' : 'Edit Product')"></h1>
+
+        <form class="row g-3" th:action="@{/product/save}" th:object="${product}" method="post">
+            <div class="row g-3">
+                <!--                <div class="col">-->
+                <!--                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">-->
+                <!--                </div>-->
+                <!--                <div class="col">-->
+                <!--                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">-->
+                <!--                </div>-->
+
+
+                <input type="hidden" th:field="*{id}"/>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Name" th:field="*{name}"/>
+                </div>
+                <div class="col">
+                    <input class="form-control" type="text" placeholder="Description" th:field="*{description}"/>
+                </div>
+
+            </div>
+            <div class="col">
+
+                <button class="button form-control btn btn-primary" type="submit">Save</button>
+
+            </div>
+
+
+        </form>
+    </div>
+</div>
+
 </body>
+<footer>
+    <div th:replace="fragments/footer_fragment :: footer"></div>
+</footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+
 </html>
