--- a/src/main/resources/templates/product/form.html
+++ b/src/main/resources/templates/product/form.html
@@ -1,66 +1,37 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Products</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type='text/css' rel='stylesheet' th:href="@{/styles/main.css}">
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-</head>
-
-
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="fragments/head "></head>
 <body>
-<header>
-    <div th:replace="fragments/header_fragment :: header"></div>
-</header>
-<div class="row justify-content-md-center">
-    <div class="col col-lg-7">
+<!-- Navigation -->
+<div th:replace="fragments/nav :: nav "></div>
 
-
-        <h1 th:text="(${product == null} ? 'New Product' : 'Edit Product')"></h1>
-
-        <form class="row g-3" th:action="@{/product/save}" th:object="${product}" method="post">
-            <div class="row g-3">
-                <!--                <div class="col">-->
-                <!--                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">-->
-                <!--                </div>-->
-                <!--                <div class="col">-->
-                <!--                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">-->
-                <!--                </div>-->
-
-
-                <input type="hidden" th:field="*{id}"/>
-                <div class="col">
-                    <input type="text" class="form-control" placeholder="Name" th:field="*{name}"/>
-                </div>
-                <div class="col">
-                    <input class="form-control" type="text" placeholder="Description" th:field="*{description}"/>
-                </div>
-
-            </div>
-            <div class="col">
-
-                <button class="button form-control btn btn-primary" type="submit">Save</button>
-
-            </div>
-
-
-        </form>
-    </div>
+<!-- Main Content -->
+<div class="container-flex container mt-4">
+    <h1 th:text="(${product.id == null} ? 'New Product' : 'Edit Product')"></h1>
+    <form th:action="@{/product/save}" th:object="${product}" method="post">
+        <input type="hidden" th:field="*{id}"/>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Name" th:field="*{name}" required>
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input type="text" class="form-control" id="description" placeholder="Description" th:field="*{description}" required>
+        </div>
+        <div class="form-group">
+            <label for="category">Category:</label>
+            <select id="category" class="form-control" th:field="*{category.id}" required>
+                <option value="" selected>Select Category...</option>
+                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Save</button>
+    </form>
 </div>
 
+<!-- Footer -->
+<div th:replace="fragments/footer :: footer "></div>
+
+<div th:replace="fragments/scripts"></div>
 </body>
-<footer>
-    <div th:replace="fragments/footer_fragment :: footer"></div>
-</footer>
-
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-
 </html>
