--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,67 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Products</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type='text/css' rel='stylesheet' th:href="@{/styles/main.css}">
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-</head>
-
-
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="fragments/head "></head>
 <body>
-<header>
-    <div th:replace="fragments/header_fragment :: header"></div>
-</header>
-<div class="row justify-content-md-center">
-    <div class="col col-lg-7">
+<!-- Navigation -->
+<div th:replace="fragments/nav :: nav "></div>
 
-        <h1>Product List</h1>
-        <table class="table table-hover">
-
-
+<main>
+    <!-- Main Content -->
+    <div class="container-flex container mt-4">
+        <h1>Products</h1>
+        <table class="table table-striped">
             <thead>
             <tr>
+                <th>Category</th>
                 <th>Name</th>
                 <th>Description</th>
                 <th>Actions</th>
             </tr>
             </thead>
-
             <tbody>
             <tr th:each="product : ${products}">
+                <td th:text="${product.category.name}"></td>
                 <td th:text="${product.name}"></td>
                 <td th:text="${product.description}"></td>
                 <td>
                     <div>
-                        <a class="btn btn-outline-success" th:href="${'/product/' + product.id}">Edit</a>
-                        <a class="btn btn-outline-danger"
-                           th:href="${'/product/' + product.id + '/delete'}">Delete</a>
+                        <a class="btn btn-outline-primary btn-sm" th:href="${'/product/' + product.id}">Edit</a>
+                        <a class="btn btn-outline-danger btn-sm" th:href="${'/product/' + product.id + '/delete'}">Delete</a>
                     </div>
                 </td>
             </tr>
             </tbody>
-
-
         </table>
-
-        <a class="button btn btn-primary" th:href="${'/product/new'}">Create New Product</a>
+        <a class="btn btn-outline-success" th:href="${'/product/new'}">Create New Product</a>
     </div>
+</main>
 
-</div>
-<footer>
-    <div th:replace="fragments/footer_fragment :: footer"></div>
-</footer>
+<!-- Footer -->
+<div th:replace="fragments/footer :: footer "></div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+<div th:replace="fragments/scripts"></div>
 </body>
-
 </html>
