--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -1,17 +1,9 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head >
-
-    <meta charset="UTF-8">
-    <title>Products</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type='text/css' rel='stylesheet' th:href="@{/styles/login.css}">
-    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-</head>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="~{fragments/head}"></head>
 <body>
-<header>
-    <div th:replace="fragments/header_fragment :: header"></div>
-</header>
+<!-- Navigation -->
+<div th:replace="~{fragments/nav :: nav}"></div>
 
 <!-- Main Content -->
 <div class="container-flex container mt-4">
@@ -60,7 +52,7 @@
 </div>
 
 <!-- Footer -->
-<div th:replace="~{fragments/footer_fragment :: footer}"></div>
+<div th:replace="~{fragments/footer :: footer}"></div>
 
 <div th:replace="~{fragments/scripts}"></div>
 </body>
